# devkit-flow

./: .gitignore  README.md  deploy-guard-keypair.json  enhance-devkit.sh  fix_all_package_json.sh  fix_test_file.sh  fix_workspace.sh  package-lock.json  package.json  reorganize.sh  setup_initial_files.sh  setup_test_binary.sh  setup_test_files.sh  standardize_test_files.sh  test-engine-keypair.json  tsconfig.json  update_all.sh  update_anchor_toml.sh  update_cargo.sh  update_lib.sh  update_package_json.sh  update_test_file.sh  verify.sh  verify_program_ids.sh
anchor/: Anchor.toml  jest.config.js  package.json
anchor/programs/chain-watch/: Cargo.toml
anchor/programs/deploy-guard/: Cargo.toml
anchor/programs/deploy-guard/src/: lib.rs
anchor/programs/test-engine/: Cargo.toml
anchor/programs/test-engine/src/: errors.rs  lib.rs  state.rs
anchor/programs/test-engine/src/instructions/: mod.rs
anchor/scripts/: initialize.ts  verify.ts
anchor/tests/: chain-watch.spec.ts  deploy-guard.spec.ts  devkitflow.spec.ts  test-engine.spec.ts
anchor/tests/utils/: metrics-collector.ts
backup_20241109_092202/: LICENSE  README.md  chain-watch-keypair.json  package-lock.json  reorganize.sh
backup_20241109_092202/anchor/: Anchor.toml  package-lock.json  tsconfig.json
backup_20241109_092202/anchor/programs/chain-watch/: Cargo.toml
backup_20241109_092202/anchor/programs/chain-watch/src/: lib.rs
backup_20241109_092202/anchor/programs/chain-watch/src/instructions/: add_metric.rs  initialize.rs  mod.rs  record_metric.rs
backup_20241109_092202/anchor/src/: devkitflow-exports.ts  index.ts
backup_20241109_092202/anchor/tests/: devkitflow.spec.ts  test-engine.spec.ts
backup_20241109_092202/devkit-flow/: LICENSE
backup_20241109_092202/src/app/: layout.tsx
new_structure/: Anchor.toml  package-lock.json  package.json  tsconfig.json
new_structure/docs/architecture/: test-engine.md
new_structure/docs/testing/: unit-testing.md
new_structure/programs/test-engine/: Cargo.toml
new_structure/programs/test-engine/src/: lib.rs
new_structure/programs/test-engine/src/errors/: mod.rs
new_structure/programs/test-engine/src/state/: mod.rs
new_structure/tests/integration/: integration-tests.spec.ts  integration-tests.ts
new_structure/tests/utils/: test-helpers.ts
src/app/chain-watch/: page.tsx
src/config/: program-ids.json
(+31 files in other folders)
