[package]
name = "deploy-guard"
version = "0.1.0"
description = "DevKit Flow deploy-guard component"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deploy_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
