[package]
name = "test-engine"
version = "0.1.0"
description = "DevKit Flow test-engine component"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
