[package]
name = "chain-watch"
version = "0.1.0"
description = "DevKit Flow chain-watch component"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_watch"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"  # Solana Program Library integration
solana-program = "1.18"  # Core Solana program dependency for on-chain interaction
thiserror = "1.0"  # For better error handling with custom error types
bytemuck = { version = "1.13", features = ["derive"] }  # Utilities for zero-cost conversions between byte types

[dev-dependencies]
solana-program-test = "1.18"  # Testing framework for Solana programs
solana-sdk = "1.18"  # Solana SDK for various Solana utilities and tools
